...
        android:paddingTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <EditText
                android:id="@+id/editText_username_login"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:background="@drawable/edittextstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
...
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_marginTop="136dp"-->
                <!--android:ems="10"-->
                <!--android:inputType="textPersonName"-->
                <!--tools:layout_editor_absoluteX="31dp"-->
                <!--tools:layout_editor_absoluteY="69dp"-->
                <!--android:layout_alignRight="@+id/button_login_login"-->
                 <!--/>-->
            <EditText
                android:id="@+id/editText_password_login"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:background="@drawable/edittextstyle"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
