...
    <string name="app_name">eCrowd</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_profile">My Profile</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="textViewTitle_Login">Login</string>
    <string name="textView_Username_Login">Username</string>
    <string name="TextView_password_login">Password</string>
    <string name="button_login_login">Login</string>
    <string name="button_signup_login">Create Account</string>
    <string name="textView_Title_Home">Hi buddy this is home</string>
    <string name="textView_Title_Signup">SignUp</string>
...
